@@ -183,13 +183,13 @@ bool ScriptInterpreter::isWindowOpenAllowed() const
       return true;
   } else // no event
   {
-    if ( m_inlineCode )
+    if ( m_inlineCode  && !m_timerCallback )
     {
       // This is the <a href="javascript:window.open('...')> case -> we let it through
       return true;
       kdDebug(6070) << "Window.open, smart policy, no event, inline code -> ok" << endl;
     }
-    else // This is the <script>window.open(...)</script> case -> block it
+    else // This is the <script>window.open(...)</script> case or a timer callback -> block it
       kdDebug(6070) << "Window.open, smart policy, no event, <script> tag -> refused" << endl;
   }
   return false;
